[project]
name = "gex-levels"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.5.1",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "rich>=15.0.0",
    "schwab-py>=1.5.1",
    "scikit-learn>=1.9.0",
    "scipy>=1.18.0",
    "yfinance>=1.5.1",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "coverage>=7.15.2",
]

[project.scripts]
gex = "gex_levels.main:main"
check-schwab-token = "gex_levels.auth.check_schwab_token:main"
